# pretty

./: .gitignore  LICENSE  MANIFEST.in  README.rst  prettify_exceptions_hook.pth  pretty.pth  pretty_hook.pth  pyproject.toml  setup.py
.github/data/: labels.yml
.github/workflows/: build.yml  check.yml  deploy.yml  mirror_utility.yml  stale.yml  sync.yml
docs/: conf.py  environment.rst  glossary.rst  index.rst
docs/guide/: environment.rst  index.rst  traceback.rst
docs/guide/use/: index.rst
docs/meta/: glossary.rst  implementation.rst  index.rst  versioning.rst
docs/reference/: glossary.rst  index.rst
docs/reference/pretty/: index.rst
docs/reference/pretty/traceback/: hook.rst  index.rst
docs/reference/pretty/traceback/formatter/: abstract.rst  default.rst  index.rst  pretty.rst
docs/traceback/: default.rst  generic.rst  hook.rst  pretty.rst
prettify_exceptions/: __init__.py  __init__.pyi  formatter.py  formatter.pyi
pretty/: __init__.py  __init__.pyi  formatter.py  utils.py
pretty/traceback/: __init__.py  __init__.pyi  formatter.py  formatter.pyi
pretty/utility/: __init__.py  _old.py  environment.py  everything.py  logging.py  terminal.py  transform.py  typing.py  version.py  wrapper.py
pretty/utility/_mirror/: __init__.py  cache.py  color.py  terminal.py  version.py  windows.py
