[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
enableExperimentalFeatures = true
pythonVersion = "3.8"
typeCheckingMode = "basic"
ignore = [
    "pretty/utility/_mirror"
]

[tool.black]
line-length = 200
exclude = '''
(
    ^/pretty/utility/_mirror/.*
)
'''
